--- a/package.json
+++ b/package.json
@@ -21,16 +21,35 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "acorn": "^7.1.1",
+    "acorn-compile": "0.0.1",
+    "astring": "^1.4.0",
+    "fs-extra": "^9.0.1",
+    "js-beautify": "^1.13.0",
+    "md5": "^2.3.0",
+    "minimist": "^1.2.0",
+    "mkdirp": "^1.0.4",
+    "multisplice": "^1.0.0",
     "rxjs": "~7.8.0",
+    "scope-analyzer": "^2.0.5",
+    "simple-concat": "^1.0.0",
     "tslib": "^2.3.0",
+    "tslint": "^6.1.3",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.2.5",
     "@angular/cli": "~15.2.5",
     "@angular/compiler-cli": "^15.2.0",
+    "@types/acorn": "^4.0.5",
+    "@types/assert": "^1.5.1",
+    "@types/astring": "^1.3.0",
     "@types/electron": "^1.6.10",
+    "@types/estree": "^1.0.0",
     "@types/jasmine": "~4.3.0",
+    "@types/js-beautify": "^1.11.0",
+    "@types/md5": "^2.2.0",
+    "@types/node": "^18.15.11",
     "autoprefixer": "^10.4.14",
     "concurrently": "^8.0.1",
     "electron": "^24.0.0",
@@ -41,8 +60,12 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
     "postcss": "^8.4.21",
+    "standard": "^14.3.1",
     "tailwindcss": "^3.3.1",
+    "tap-spec": "^5.0.0",
+    "tape": "^5.0.0",
     "typescript": "~4.9.4",
-    "wait-on": "^7.0.1"
+    "wait-on": "^7.0.1",
+    "webpack": "^4.35.3"
   }
 }
