--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,10 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "types": ["node"],
+    "paths": {
+      "*": ["types/*.d.ts"]
+    },
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
